# FrEVL

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  __init__.py  benchmark_inference.py  data_loader.py  demo.py  deploy_aws.py  deployment.yaml  docker-compose.yml  download_datasets.py  evaluate.py  model.py  requirements-dev.txt  requirements.txt  serve.py  test_model.py  train_custom_dataset.py
scripts/: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  ci-cd.yml  cli.py  data_loader.py  demo.py  download_datasets.py  optimizers.py  prepare_data.py  pyproject.toml  setup.py  simple_inference.py  train.py  train_vqa.yaml  utils.py
